Arreglo Index y contacto

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -109,6 +109,9 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="https://a2plcpnl0571.prod.iad2.secureserver.net:2096/login/"><i class="fa fa-fw fa-inbox"></i> </a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -123,6 +126,7 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -134,7 +138,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('images/slider-img2.jpg');"></div>
+               <div class="fill" style="background-image:url('images/slider-img2.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Servicio</h2>
                 </div>
@@ -145,7 +149,13 @@
                     <h2>Decoraci&oacute;n</h2>
                 </div>
             </div>
-        </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('images/2-img-slider.jpg')"></div>
+                <div class="carousel-caption">
+                    <h2>Decoraci&oacute;n</h2>
+                </div>
+            </div>
+     </div>
 
         <!-- Controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
@@ -172,7 +182,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
@@ -183,7 +193,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
@@ -194,7 +204,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
@@ -205,22 +215,22 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.2.0</h4>
+                        <h4><i class="fa fa-fw fa-spinner"></i>Misi&oacute;n</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>El mejor servicio en la organizaci&oacute;n de eventos y reuniones as&iacute; como tambi&eacute;n en la elaboraci&oacute;n  de banquetes y alquiler de elegante vajilla para todo tipo de celebraci&oacute;n.</p>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
+                        <h4><i class="fa fa-fw fa-eye"></i>Visi&oacute;n</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>Ser la compa&ntilde;&iacute;a elegida el momento de organizar un evento  por nuestro servicio, elegancia y calidad.</p>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
@@ -231,7 +241,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
                     </div>
                 </div>
             </div>
@@ -241,36 +251,36 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
+                <h2 class="page-header">Portfolio   </h2>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio1.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio2.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio3.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio4.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio5.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio6.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -279,23 +289,28 @@
         <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
+                <h2 class="page-header">Grupo Linage</h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
+                <p class="text-justify">    Grupo Linage es una empresa firma ecuatoriana con gran experiencia en la organizaci&oacute;n profesional de todo tipo de eventos  
+                    ofreciendo a nuestra selecta clientela  la oportunidad de vivir el mejor  momento en su evento al poner a su disposici&oacute;n los m&aacute;s destacados  
+                    lugares  junto con la degustaci&oacute;n de nuestra exquisita cocina internacional y nacional confiando en un servicio de alto nivel y en armon&iacute;a 
+                       con la elegancia que sus clientes merecen.</p>
+                
+               <p>Nuestros servicios incluyen:</p>
                 <ul>
-                    <li><strong>Bootstrap v3.2.0</strong>
+                    <li><strong>Servicio de Catering</strong>
                     </li>
-                    <li>jQuery v1.11.0</li>
-                    <li>Font Awesome v4.1.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
+                    <li>Alquiler de Menaje y Vajilla</li>
+                    <li>Pasteler&iacute;a</li>
+                    <li>Cupcakes</li>
+                    <li>Bocaditos</li>
+                    <li>Alquiler de Carpas</li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+               <p>Nos caracterizamos por nuestra responsabilidad, calidad y servicio. Contamos con personal capacitado para cualquier tipo de evento que necesite.</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <img class="img-responsive" src="images/Logo-Grupo-Linage.png" alt="">
             </div>
         </div>
         <!-- /.row -->
@@ -306,10 +321,10 @@
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+                    <p>Si necesitan m&aacute;s ayuda o accesoria para sus eventos no olvide en contactarnos. Estaremos prestos para brindar nuestros servicios.</p>
                 </div>
                 <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
+                    <a class="btn btn-lg btn-default btn-block" href="contact.html#mensajeContacto">Cont&aacute;ctese con Nosotros</a>
                 </div>
             </div>
         </div>
@@ -320,6 +335,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <p><a href="https://www.facebook.com/Catering-y-Eventos-Linage-539385739540496/"><img src="images/facebook-icon.png" alt="" width="5%"/></a>
+                        <a href=""><img src="images/twitter-icon.png" alt="" width="5%"/></a></p>
                     <p>Copyright &copy; Grupo Linage 2016</p>
                 </div>
             </div>
