--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -173,7 +173,7 @@
         <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
         <div class="row">
             <div class="col-md-8">
-                <h3>Env&iacute;enos un mensaje </h3>
+                <h3 id="mensajeContacto">Env&iacute;enos un mensaje </h3>
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group form-group">
                         <div class="controls">
@@ -215,6 +215,8 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <p><a href="https://www.facebook.com/Catering-y-Eventos-Linage-539385739540496/"><img src="images/facebook-icon.png" alt="" width="5%"/></a>
+                        <a href=""><img src="images/twitter-icon.png" alt="" width="5%"/></a></p>               
                     <p>Copyright &copy; Grupo Linage 2016</p>
                 </div>
             </div>
