Pagina WEB semi completa (1ra Version)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,34 +47,30 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Acerca</a>
+                        <a href="about.html">Quines Somos</a>
                     </li>
-                    <li>
-                        <a href="services.html">Servicios</a>
+                     <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="services.html#eventoSocial">Eventos Sociales</a>
+                            </li>
+                            <li>
+                                <a href="services.html#eventoEmpresarial">Eventos Empresariales</a>
+                            </li>
+                            <li>
+                                <a href="services.html#eventoOtros">Otros Servicios</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="contact.html">Contacto</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
+                    
+                    <li>
+                        <a href="portfolio-4-col.html">Galer&iacute;a</a>
                     </li>
+                    <!--
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -108,7 +104,7 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="https://a2plcpnl0571.prod.iad2.secureserver.net:2096/login/"><i class="fa fa-fw fa-inbox"></i> </a>
                     </li>
@@ -134,25 +130,25 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('images/slider-img1.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Bocaditos</h2>
+                    <h3>Bocaditos</h3>
                 </div>
             </div>
             <div class="item">
                <div class="fill" style="background-image:url('images/slider-img2.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Servicio</h2>
+                    <h3>Servicio</h3>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/1-img-slider.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Decoraci&oacute;n</h2>
+                    <h3>Decoraci&oacute;n</h3>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/2-img-slider.jpg')"></div>
                 <div class="carousel-caption">
-                    <h2>Decoraci&oacute;n</h2>
+                    <h3>Eventos</h3>
                 </div>
             </div>
      </div>
@@ -169,6 +165,7 @@
     <!-- Page Content -->
     <div class="container">
     <!-- Marketing Icons Section Atributos-->
+    <!--
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
@@ -208,88 +205,12 @@
                     </div>
                 </div>
             </div>
-        </div>        
+        </div>     -->   
         
-        <!-- Marketing Icons Section -->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-spinner"></i>Misi&oacute;n</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>El mejor servicio en la organizaci&oacute;n de eventos y reuniones as&iacute; como tambi&eacute;n en la elaboraci&oacute;n  de banquetes y alquiler de elegante vajilla para todo tipo de celebraci&oacute;n.</p>
-                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-eye"></i>Visi&oacute;n</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Ser la compa&ntilde;&iacute;a elegida el momento de organizar un evento  por nuestro servicio, elegancia y calidad.</p>
-                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Leer M&aacute;s</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Portfolio Section -->
+            <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Galer&iacute;a</h2>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio1.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio2.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio3.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio4.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio5.jpg" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio6.jpg" alt="">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Features Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Grupo Linage</h2>
+                <h2 class="page-header">Quienes Somos</h2>
             </div>
             <div class="col-md-6">
                 <p class="text-justify">    Grupo Linage es una empresa firma ecuatoriana con gran experiencia en la organizaci&oacute;n profesional de todo tipo de eventos  
@@ -314,10 +235,7 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <hr>
-
-        <!-- Call to Action Section -->
+            <!-- Call to Action Section -->
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
@@ -328,6 +246,68 @@
                 </div>
             </div>
         </div>
+        <!-- Portfolio Section -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Galer&iacute;a</h2>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio1.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio2.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio3.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio4.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio5.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <a href="portfolio-4-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="images/portafolio6.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+        <hr>
+        <!-- Marketing Icons Section -->
+        <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-spinner"></i>Misi&oacute;n</h4>
+                    </div>
+                    <div class="panel-body text-justify">
+                        <p>El mejor servicio en la organizaci&oacute;n de eventos y reuniones as&iacute; como tambi&eacute;n en la elaboraci&oacute;n  de banquetes y alquiler de elegante vajilla para todo tipo de celebraci&oacute;n.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-eye"></i>Visi&oacute;n</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Ser la compa&ntilde;&iacute;a elegida el momento de organizar un evento  por nuestro servicio, elegancia y calidad.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.row -->
 
         <hr>
 
@@ -336,7 +316,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p><a href="https://www.facebook.com/Catering-y-Eventos-Linage-539385739540496/"><img src="images/facebook-icon.png" alt="" width="5%"/></a>
-                        <a href=""><img src="images/twitter-icon.png" alt="" width="5%"/></a></p>
+                        <a href=""><img   src="images/twitter-icon.png" alt="" width="5%"/></a></p>
                     <p>Copyright &copy; Grupo Linage 2016</p>
                 </div>
             </div>
@@ -354,7 +334,7 @@
     <!-- Script to Activate the Carousel -->
     <script>
     $('.carousel').carousel({
-        interval: 5000 //changes the speed
+        interval: 3000 //changes the speed
     })
     </script>
 
