--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -42,40 +42,36 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="nombre" href="index.html">Grupo Linage</a>
+                <a class="navbar-brand" id= "nombre" href="index.html">Grupo Linage</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Acerca</a>
+                        <a href="about.html">Quines Somos</a>
                     </li>
-                    <li>
-                        <a href="services.html">Servicios</a>
+                     <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="services.html#eventoSocial">Eventos Sociales</a>
+                            </li>
+                            <li>
+                                <a href="services.html#eventoEmpresarial">Eventos Empresariales</a>
+                            </li>
+                            <li>
+                                <a href="services.html#eventoOtros">Otros Servicios</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="active">
                         <a href="contact.html">Contacto</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
+                    
+                    <li>
+                        <a href="portfolio-4-col.html">Galer&iacute;a</a>
                     </li>
+                    <!--
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -109,6 +105,9 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
+                    </li>-->
+                    <li>
+                        <a href="https://a2plcpnl0571.prod.iad2.secureserver.net:2096/login/"><i class="fa fa-fw fa-inbox"></i> </a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +115,6 @@
         </div>
         <!-- /.container -->
     </nav>
-
     <!-- Page Content -->
     <div class="container">
 
